--- a/test/bor/test.html
+++ b/test/bor/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
     <link rel="stylesheet" href="">
-    <script src='ModuleLoad.js'></script>
+    <script src='../../ModuleLoad.js'></script>
 </head>
 <body>
 <script type="text/javascript">
